<resources>
    <string name="app_name">Dame</string>
    <string name="MenuListData">Menu</string>
    <string name="register">Registrieren</string>
    <string name="anmelden">Anmelden</string>
    <string name="newGame">neues Spiel</string>
    <string name="gamerules">Spielregeln</string>
    <string name="exitGame">Spiel beenden</string>
    <string name="lblplayername">Entscheide dich für einen Spielernamen</string>
    <string name="placeholderForNameField">Spielername</string>
    <string name="lblChooseOfColorForFigur">Wähle deine gewünschte Farbe der Spielfiguren</string>
    <string name="gameFinished">Spiel beendet</string>
    <string name="btnStartGame">Spiel starten</string>
    <string name="lblFigureColor">Wähle die gewünschte Figurfarbe</string>
    <string name="playerOneSettings">Spieler 1</string>
    <string name="playerTwoSettings">Spieler 2</string>
    <string name="playerOneTurn">Spieler 1</string>
    <string name="playerTwoTurn">Spieler 2 </string>
    <string name="btnLogin">Login</string>
    <string name="lblNoAccountYet">Noch kein Account?</string>
    <string name="placeholderTxtPassword">Passwort</string>
    <string name="btnLblLogin">Einloggen</string>
    <string name="lblCreateNewAccount">Neuen Account erstellen</string>
    <string name="btnLblCreateGame">Spiel erstellen</string>
    <string name="logout">Abmelden</string>
    <string name="placeholderGameName">Lege einen Spielnamen fest</string>
    <string name="btnToJoinGame">Spiel beitreten</string>
    <string name="btnJoinGame">Spiel beitreten</string>
    <string name="lblJoinGame">Spiel beitreten</string>
    <string name="placeholderJoinGameName">Gib hier einen Spielnamen ein</string>
    <string name="lblLoginEmail">Email</string>
    <string name="lblLoginPassword">Passwort</string>
    <string name="lblLoginPasswordRepeat">Passwort bestätigen</string>
    <string name="lblWaitingForGameList">Suche verfügbare Spiele...</string>
    <string name="btnDeleteAccount">Konto löschen</string>
    <string name="yourAccount">Dein Konto</string>

    <string name="text_ziehen">
        Die Steine ziehen ein Feld in diagonaler Richtung, aber nur vorwärts und nur auf freie dunkle Felder.
    </string>

    <string name="text_schlagen">
        Es gilt Schlagzwang. Bei Brettspielnetz.de wird das automatisch durchgesetzt.
        Wenn sich eigene freie Steine bei einem Zug nicht anklicken lassen,
        kann das daran liegen, dass irgendwo auf dem Brett die Möglichkeit zum Schlagen besteht.
        Nur einer dieser Steine kann dann ausgewählt werden. Einfache Steine dürfen nur vorwärts schlagen.
        Wenn du die Auswahl zwischen verschiedenen Schlagmöglichkeiten hast, darfst du dich frei entscheiden.
        Weder ein Mehrfachschlagen, noch ein Schlagen mit einer Dame hat absoluten Vorrang.
    </string>

    <string name="text_Dame">
        Du bekommst eine Dame, wenn einer deiner Steine auf der gegnerischen Grundlinie stehen bleibt,
        egal ob durch einen normalen Zug oder durch ein Schlagen.
        Der Stein wird dann durch ein "D" gekennzeichnet (im Brettspiel wird ein zweiter Stein darauf gestellt).
        Eine Dame kannst Du nun sowohl schräg vorwärts als auch rückwärts bewegen und genauso darfst du mit ihr auch schlagen.
        Im Gegensatz zur internationalen Damenvariante darf sich die Dame aber
        nur um ein Feld vorwärts oder rückwärts bewegen.
        Beim Schlagen muss die Dame direkt vor dem gegnerischen Stein stehen und
        muss nach dem Schlagen direkt hinter dem geschlagenen Stein landen.
    </string>
    <string name="txtMinimumPasswortlänge">Das Passwort muss mindestens 8 Zeichen enthalten</string>
    <string name="txtUnsernameNichtLeer">Name darf nicht leer sein</string>
    <string name="txtUsernameAufforderung">Bitte legen Sie ein Passwort fest</string>
    <string name="WähleSpielername">Entscheide dich für einen Spielername</string>
    <string name="Spielen">Spielen!</string>
    <string name="spiel_erstellen">Spiel erstellen</string>
    <string name="wählen_raum_name">Name des Raumes eingeben</string>
    <string name="zurück_menü">Zurück zum Menü</string>
    <string name="in_dame_umwandeln">In Dame umwandeln</string>
    <string name="schlagen">Schlagen</string>
    <string name="das_ziehen_der_steine">Das Ziehen der Steine</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="passwort">Passwort</string>
    <string name="online_spielen">Online Spielen</string>
    <string name="neues_offline_spiel">Neues lokales Spiel</string>
    <string name="was_willst_tun">Was willst du tun?</string>
    <string name="onlinespiel_suchen">Online Spiel suchen</string>
    <string name="onlinespiel_erstellen">Online Spiel erstellen</string>
    <string name="email">E-Mail</string>
    <string name="passwort_wiederholen">Passwort wiederholen</string>
    <string name="passwort_zurucksetzen">Passwort zurücksetzen</string>
    <string name="placeholder_for_mail">placeholder_for_mail</string>
    <string name="timlimit">Zeitlimit (10 min)</string>


</resources>