<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical"
    android:background="@color/damebraun">


    <Button
        android:id="@+id/btnToRegister"
        android:layout_width="218dp"
        android:layout_height="61dp"
        android:layout_centerInParent="true"
        android:background="@color/sandbraun"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/register"
        android:textColor="@color/damebraun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/btnOnlineSpiel"
        android:layout_width="217dp"
        android:layout_height="54dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/sandbraun"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/online_spielen"
        android:textColor="@color/damebraun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <Button
        android:id="@+id/btnInitnewGame"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:background="@color/sandbraun"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/neues_offline_spiel"
        android:textColor="@color/damebraun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />


</androidx.constraintlayout.widget.ConstraintLayout>