<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/damebraun"
    android:orientation="vertical"
    tools:context=".Activities.GameSettings">


    <TextView
        android:id="@+id/lblPlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:text="@string/playerOneSettings"
        android:textColor="@color/sandbraun"
        android:textSize="17dp"
        android:textStyle="bold|italic"></TextView>

    <EditText
        android:id="@+id/editTxtPlayerOneName"
        android:layout_width="291dp"
        android:layout_height="64dp"
        android:fontFamily="@font/reem_kufi"
        android:text="@string/lblplayername"
        android:textColor="@color/sandbraun"
        android:textSize="15dp"
        android:layout_marginLeft="50dp">
    </EditText>

    <TextView
        android:id="@+id/lblPlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:text="@string/playerTwoSettings"
        android:textColor="@color/sandbraun"
        android:textSize="17dp"
        android:textStyle="bold|italic">
    </TextView>

    <EditText

        android:id="@+id/editTxtPlayerTwoName"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/reem_kufi"
        android:text="@string/lblplayername"
        android:textColor="@color/sandbraun"
        android:textSize="15dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="135dp"
        android:layout_height="56dp"
        android:background="@color/sandbraun"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Spielen!"
        android:textColor="@color/damebraun"
        android:layout_marginLeft="50dp" />


</LinearLayout>