<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/damebraun"
    android:orientation="vertical"
    tools:context=".Activities.OfflineGameSettings">


    <TextView
        android:id="@+id/lblPlayerOne"
        android:layout_width="93dp"
        android:layout_height="28dp"
        android:text="@string/playerOneSettings"
        android:textColor="@color/sandbraun"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <EditText
        android:id="@+id/editTxtPlayerOneName"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:fontFamily="@font/reem_kufi"
        android:textColor="@color/sandbraun"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:autofillHints="Spielername 1" />

    <TextView
        android:id="@+id/lblPlayerTwo"
        android:layout_width="101dp"
        android:layout_height="32dp"
        android:text="@string/playerTwoSettings"
        android:textColor="@color/sandbraun"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <TextView
        android:id="@+id/lblPlayerTwo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WähleSpielername"
        android:textColor="@color/sandbraun"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:text="Entscheide dich für einen Spielernamen" />

    <TextView
        android:id="@+id/lblPlayerTwo2"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:text="@string/WähleSpielername"
        android:textColor="@color/sandbraun"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558"
        tools:text="Entscheide dich für einen Spielername" />

    <EditText

        android:id="@+id/editTxtPlayerTwoName"
        android:layout_width="350dp"
        android:layout_height="62dp"
        android:fontFamily="@font/reem_kufi"
        android:textColor="@color/sandbraun"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:autofillHints="Spielername 2" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="135dp"
        android:layout_height="56dp"
        android:layout_marginTop="100dp"
        android:background="@color/sandbraun"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/Spielen"
        android:textColor="@color/damebraun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <TextView
        android:id="@+id/lblTimeLimit"
        android:layout_width="155dp"
        android:layout_height="26dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="55dp"
        android:text="@string/timlimit"
        android:textColor="@color/sandbraun"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStartGame"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxTimer"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPlayerTwoName"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBoxTimer"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="180dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPlayerTwoName"
        app:layout_constraintVertical_bias="0.743"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>