<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:rowCount="6"
    android:background="@color/damebraun"
    android:columnCount="2">

    <TextView
        android:layout_width="201dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="503dp"
        android:background="@color/sandbraun"
        android:fontFamily="@font/reem_kufi"
        android:text="@string/lblNoAccountYet"
        android:textColor="@color/damebraun"></TextView>

    <TextView
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/reem_kufi"
        android:text="Login"
        android:textColor="@color/sandbraun"
        android:textSize="26dp"
        android:textStyle="bold|italic"></TextView>

    <Button
        android:id="@+id/btnToRegister"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="262dp"
        android:layout_marginTop="481dp"
        android:background="@color/sandbraun"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/register"
        android:textColor="@color/damebraun"></Button>

    <EditText
        android:id="@+id/txtLoginUsername"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="100dp"
        android:background="@color/sandbraun"
        android:fontFamily="@font/reem_kufi"
        android:textColor="@color/damebraun"
        android:inputType="text"
        android:text="Username" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="100dp"
        android:background="@color/sandbraun"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="250dp"
        android:background="@color/sandbraun"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/btnLogin"
        android:textColor="@color/damebraun"
        android:layout_marginTop="140dp"/>

    <ProgressBar
        android:id="@+id/loadBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="405dp"
        android:layout_marginLeft="180dp"/>


</RelativeLayout>